force-app/main/default/objects/Event_Ticket__c/Event_Ticket__c.object-meta.xml
<CustomObject>
    <label>Event Ticket</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>