force-app/main/default/objects/Event_Ticket__c/fields/Early_bird_price__c.field-meta.xml
<CustomField>
    <fullName>Early_bird_price__c</fullName>
    <label>Early bird price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>