force-app/main/default/objects/Event_Ticket__c/fields/Early_Deadline_Price__c.field-meta.xml
<CustomField>
    <fullName>Early_Deadline_Price__c</fullName>
    <label>Early Deadline Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>