force-app/main/default/objects/Event_Ticket__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
                <default>true</default>
                <label>Onsite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>