force-app/main/default/objects/Event_Ticket__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Session__c.IsAdditional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Event Tickets</relationshipLabel>
    <relationshipName>Event_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>