force-app/main/default/objects/Event_Ticket__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Event Tickets</relationshipLabel>
    <relationshipName>Event_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>